# daily-news

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  vercel.json
.claude/: settings.json
.claude/commands/: brief.md
data/: themes_seed.json  universe.json
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN.md  PRD.md  ROADMAP.md  SIGNALS.md
frontend/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
frontend/public/: manifest.json  picks_history.json  sw.js
frontend/scripts/: export-from-supabase.mjs
scripts/: README.md  build_universe.py  com.user.news-briefing.morning.plist  generate_icons.py  supabase_schema.sql
src/news_briefing/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py
tests/: conftest.py  test_cache.py  test_cleanup.py  test_cli.py  test_collectors_new.py  test_config.py  test_curation.py  test_dart.py  test_db.py  test_deeplinks.py  test_digest.py  test_discovery.py  test_edgar.py  test_embed.py  test_embeddings.py  test_glossary_analysis.py  test_glossary_storage.py  test_json_builder.py  test_kakao.py  test_llm.py  test_llm_health.py  test_orchestrator.py  test_pick_verify.py  test_picks.py  test_picks_outcomes.py  test_publish.py  test_queries.py  test_rag.py  test_rss.py  test_scoring.py  test_scoring_edgar.py  test_scoring_v2.py  test_screener.py  test_seen.py  test_spillover.py  test_themes_analysis.py  test_themes_storage.py  test_tickers.py  test_trends.py  test_watchlist.py  (+2 more)
tests/fixtures/: dart_list.json  edgar_8k.atom  hankyung.xml  (+1 more)
(+117 files in other folders)
