[project]
name = "news-briefing"
version = "0.1.0"
description = "개인용 뉴스·경제 브리핑 자동화 시스템"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_briefing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that hit real external APIs (skipped by default)",
]
addopts = "-ra -m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
